--- a/portfolio.html
+++ b/portfolio.html
@@ -20,9 +20,10 @@
             <h1>Portfolio</h1>
             <ul id="portfolioItems">
                 <li>
-                    <h2>Project Name</h2>
+                    <h2><a href="a">Project Name</a></h2>
+                    <img src="images/portfolio/project.png" alt="picture of project">
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Nam at lectus urna duis convallis convallis tellus. Aliquam ultrices sagittis orci a scelerisque purus.</p>
-                    <a href="a">Link</a>
+                    
                 </li>
             </ul>
         </main>
