--- a/resume.html
+++ b/resume.html
@@ -22,50 +22,48 @@
             <p>Seeking an internship in the field of computer science</p>
 
             <h2>Education:</h2>
-            <ul>      
+            <ul class="indent">      
                 <li>Bachelor of Science, Computer Science    May 2027</li>
                 <li>Rose-Hulman Institute of Technology, Terre Haute, IN    GPA: 3.86</li>
-            </ul>
-            <p>Related Courses: Introduction to Computer Systems, Object-Oriented Software Development, Data Structures and Alg Analysis, Intro to Web Programming, Physics I, II, Chemistry I, Calculus II, III, Matrix Alg & Diff Equations I </p>
-            <ul>
+                <li>Related Courses: Introduction to Computer Systems, Object-Oriented Software Development, Data Structures and Alg Analysis, Intro to Web Programming, Physics I, II, Chemistry I, Calculus II, III, Matrix Alg & Diff Equations I </li>
                 <li>Hamilton Southeastern High School, Fishers, IN    May 2023</li>
                 <li>Honors: Biology, Chemistry, Physics    Weighted GPA: 4.2/4</li>
 	            <li>AP Courses: Calculus AB, Intro to CS, CSA</li>
             </ul>
 
             <h2>Skills:</h2>  
-            <ul>          
+            <ul class="indent">          
                 <li>Software: Python, JavaScript, HTML, CSS, C, Java</li>
 	            <li>Systems: Windows</li>
 	            <li>Language: Conversational Mandarin</li>
             </ul>
 
             <h2>Experience:</h2>   
-            <ul>  
+            <ul class="indent">  
                 <li>Sushi Club- Fishers, IN    June 2022 – July 2022</li>
 	            <li>Busser</li>
             </ul>
-            <ol>
+            <ul class="bullets">
                 <li>Assist in areas lacking in necessary personnel</li>
                 <li>Set up and cleared tables swiftly and thoroughly</li>
                 <li>Oversaw and prioritized customer satisfaction</li>
                 <li>Organized and retrieved customer orders</li>
-            </ol>
+            </ul>
 
             <h2>Projects:</h2>  
-            <ul>        
+            <ul class="indent">        
                 <li>Data Analyst    Winter 2022</li>
-                <ol>
+                <ul class="bullets">
                     <li>Developed an animation using JavaScript showing a change in a set of given data</li>
                     <li>Noted the max and min values with associated date</li>
                     <li>Integrated a user input to search for specific values in the data</li>
-                </ol>
+                </ul>
                 <li>Jetpack Joyride    Winter 2024</li>
-                <ol>
+                <ul class="bullets">
                     <li>Developed an animation using Java showing a change in a frame where the game is running</li>
                     <li>Integrated user input to allow the user to control the player avatar</li>
                     <li>Added the ability to input new levels through a text file</li>
-                </ol>
+                </ul>
             </ul>
         </main>
         <footer>
