--- a/index.html
+++ b/index.html
@@ -8,7 +8,10 @@
         <link rel="stylesheet" href="styles/main.css">
         <link rel="icon" href="images/favicon.png">
     </head>
-    <body>
+    <body id="about">
+        <header>
+            <h1>Oscar Zhang</h1>
+        </header>
         <nav>
             <ul>
                 <li><a href="index.html">About</a></li>
@@ -17,7 +20,7 @@
             </ul>
         </nav>
         <main>
-        <h1>Oscar Zhang</h1>
+        <h1>About</h1>
         <img src="images/photo.jpeg" alt="Picture of me">
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Amet volutpat consequat mauris nunc. Nam aliquam sem et tortor consequat id porta nibh venenatis. Quisque non tellus orci ac auctor augue. Aliquet risus feugiat in ante metus dictum at tempor commodo. Malesuada fames ac turpis egestas integer. Vitae sapien pellentesque habitant morbi. A scelerisque purus semper eget duis at. Tristique magna sit amet purus gravida quis. Diam donec adipiscing tristique risus. Volutpat consequat mauris nunc congue nisi vitae suscipit. Id leo in vitae turpis massa sed. Integer malesuada nunc vel risus commodo viverra.</p>
         <p>Commodo quis imperdiet massa tincidunt nunc pulvinar sapien et ligula. Eget aliquet nibh praesent tristique magna sit amet purus. Nunc consequat interdum varius sit amet mattis vulputate. Arcu non sodales neque sodales ut etiam sit. Faucibus scelerisque eleifend donec pretium vulputate sapien nec sagittis aliquam. Ultricies integer quis auctor elit sed vulputate mi sit. Adipiscing tristique risus nec feugiat in fermentum posuere urna. Fringilla ut morbi tincidunt augue interdum velit. Augue interdum velit euismod in. Mauris commodo quis imperdiet massa tincidunt nunc. Tempor commodo ullamcorper a lacus vestibulum sed arcu non. Sapien faucibus et molestie ac feugiat. Posuere lorem ipsum dolor sit. Nunc scelerisque viverra mauris in aliquam sem fringilla ut. Adipiscing tristique risus nec feugiat in. Odio morbi quis commodo odio aenean sed. Sollicitudin nibh sit amet commodo. Sit amet facilisis magna etiam. Purus non enim praesent elementum facilisis leo vel fringilla est.</p>
