--- a/portfolio.html
+++ b/portfolio.html
@@ -9,6 +9,9 @@
         <link rel="icon" href="images/favicon.png">
     </head>
     <body>
+        <header>
+            <h1>Oscar Zhang</h1>
+        </header>
         <nav>
             <ul>
                 <li><a href="index.html">About</a></li>
@@ -22,6 +25,11 @@
                 <li>
                     <h2><a href="a">Project Name</a></h2>
                     <img src="images/portfolio/project.png" alt="picture of project">
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Nam at lectus urna duis convallis convallis tellus. Aliquam ultrices sagittis orci a scelerisque purus.</p>
+                </li>
+                <li>
+                    <h2><a href="a">Another Project</a></h2>
+                    <img src="images/portfolio/tempProject.png" alt="picture of another project">
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Nam at lectus urna duis convallis convallis tellus. Aliquam ultrices sagittis orci a scelerisque purus.</p>
                 </li>
             </ul>
