--- a/resume.html
+++ b/resume.html
@@ -9,6 +9,9 @@
         <link rel="icon" href="images/favicon.png">
     </head>
     <body>
+        <header>
+            <h1>Oscar Zhang</h1>
+        </header>
         <nav>
             <ul>
                 <li><a href="index.html">About</a></li>
