--- a/portfolio.html
+++ b/portfolio.html
@@ -8,7 +8,7 @@
         <link rel="stylesheet" href="styles/main.css">
         <link rel="icon" href="images/favicon.png">
     </head>
-    <body>
+    <body id="portfolio">
         <header>
             <h1>Oscar Zhang</h1>
         </header>
