--- a/portfolio.html
+++ b/portfolio.html
@@ -23,9 +23,9 @@
             <h1>Portfolio</h1>
             <ul id="portfolioItems">
                 <li>
-                    <h2><a href="a">Project Name</a></h2>
-                    <img src="images/portfolio/project.png" alt="picture of project">
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Nam at lectus urna duis convallis convallis tellus. Aliquam ultrices sagittis orci a scelerisque purus.</p>
+                    <h2><a href="a">Jetpack Joyride</a></h2>
+                    <img src="images/portfolio/project.png" alt="picture of game">
+                    <p>This is a project I made for CSSE 220, a software development class.</p>
                 </li>
                 <li>
                     <h2><a href="a">Another Project</a></h2>
