--- a/portfolio.html
+++ b/portfolio.html
@@ -30,7 +30,7 @@
                 <li>
                     <h2><a href="a">Another Project</a></h2>
                     <img src="images/portfolio/tempProject.png" alt="picture of another project">
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Nam at lectus urna duis convallis convallis tellus. Aliquam ultrices sagittis orci a scelerisque purus.</p>
+                    <p>This is a project I made in Highschool, an app that would scan a data set of gas prices and create an animation of a bar graph from it. I couldn't get a photo of it</p>
                 </li>
             </ul>
         </main>
