--- a/portfolio.html
+++ b/portfolio.html
@@ -25,12 +25,12 @@
                 <li>
                     <h2><a href="a">Jetpack Joyride</a></h2>
                     <img src="images/portfolio/project.png" alt="picture of game">
-                    <p>This is a project I made for CSSE 220, a software development class.</p>
+                    <p>This is a project I made for CSSE 220, a software development class. It was made to be similar to Jetpack Joyride but, without some of its features.</p>
                 </li>
                 <li>
                     <h2><a href="a">Another Project</a></h2>
                     <img src="images/portfolio/tempProject.png" alt="picture of another project">
-                    <p>This is a project I made in Highschool, an app that would scan a data set of gas prices and create an animation of a bar graph from it. I couldn't get a photo of it</p>
+                    <p>This is a project I made in highschool, an app that would scan a data set of gas prices from different areas of the US with the date and create an animation of a bar graph from it. I couldn't get a photo of it</p>
                 </li>
             </ul>
         </main>
