--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
         <title>Oscar Zhang's Website</title>
         <link rel="stylesheet" href="styles/normalize.css">
         <link rel="stylesheet" href="styles/main.css">
-        <link rel="icon" href="images/favicon.png">
+        <link rel="icon" href="images/favicon.ico">
+        <link rel="stylesheet" href="site.webmanifest">
     </head>
     <body id="about">
         <header>
